tests/compile_fail/ktstr_test_max_cpus_zero.rs
use ktstr::ktstr_test;

#[ktstr_test(max_cpus = 0)]
fn bad(_ctx: &ktstr::scenario::Ctx) -> anyhow::Result<ktstr::assert::AssertResult> {
    Ok(ktstr::assert::AssertResult::pass())
}

fn main() {}
